# bazel-multiple-npm-packages-test

./: .bazelrc  .gitignore  BUILD.bazel  README.md  WORKSPACE  bazel-bazel-multiple-npm-test  package.json  tsconfig.json
bar/: BUILD.bazel  bar.ts  bar_test.ts  package.json
bar_package/: BUILD.bazel  bar.ts  package.json
baz/: BUILD.bazel  baz.ts
baz_package/: BUILD.bazel  baz.ts
build_with_both/: BUILD.bazel  README.md  package.json  tsconfig.json
build_with_both/src/: example.ts
external_package/: README.md  package.json  tsconfig.json
external_package/src/: external_package.ts
foo/: BUILD.bazel  foo.ts  foo_test.ts  package.json
foo/bla/: BUILD.bazel  bla.ts
foo_package/: BUILD.bazel  foo.ts  foo_test.ts  package.json
foo_package/subdir/: BUILD.bazel  bla.ts
non_bazel_package/: README.md  package.json
non_bazel_package/src/: non_bazel_package.ts
