load("@build_bazel_rules_nodejs//:index.bzl", "pkg_npm")
load("@npm//@bazel/typescript:index.bzl", "ts_library")

ts_library(
    name = "bar_library",
    visibility = ["//visibility:public"],
    srcs = [
        "bar.ts",
    ],
    deps = [
        "//foo_package:foo_library",
    ],
    module_name = "@tests/bar",
)

pkg_npm(
    name = "bar_package",
    srcs = [
        "package.json",
    ],
    deps = [
        ":bar_library",
    ],
)
