load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")
load("@npm//@bazel/typescript:index.bzl", "ts_library")

ts_library(
    name = "baz_library",
    visibility = ["//visibility:public"],
    srcs = [
        "baz.ts",
    ],
    deps = [
        "//bar_package:bar_library",
    ],
    module_name = "@tests/baz",
)


nodejs_binary(
    name = "baz_binary",
    entry_point = "baz.ts",
    data = [
        ":baz_library",
    ],
)


