load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")
load("@npm//@bazel/typescript:index.bzl", "ts_library")

ts_library(
    name = "baz_lib",
    visibility = ["//visibility:public"],
    srcs = [
        "baz.ts",
    ],
    deps = [
        "//bar_package:bar_lib",
    ],
    module_name = "@test_multiple_packages/baz",
)


nodejs_binary(
    name = "baz_binary",
    entry_point = "baz.ts",
    data = [
        ":baz_lib",
        "//bar_package",
    ],
)


