load("@build_bazel_rules_nodejs//:index.bzl", "pkg_npm")
load("@npm//@bazel/typescript:index.bzl", "ts_library")
load("@npm//@bazel/jasmine:index.bzl", "jasmine_node_test");


ts_library(
    name = "foo_lib",
    module_name = "@test_scoped_repo/foo",
    visibility = ["//visibility:public"],
    srcs = [
        "foo.ts",
    ],
    deps = [
        "//foo/bla:bla_lib",
    ],
)

ts_library(
    name = "foo_test_lib",
    testonly = True,
    srcs = [
        "foo_test.ts",
    ],
    deps = [
        ":foo_lib",
        "@npm//@types/jasmine",
    ],
)

jasmine_node_test(
    name = "foo_test",
    srcs = [
        ":foo_test_lib",
    ],
)

pkg_npm(
    name = "foo_pkg",
    srcs = [
        "package.json",
    ],
    deps = [
        ":foo_lib",
    ],
    nested_packages = [
        "//foo/bla:bla_pkg",
    ]
)

