load("@build_bazel_rules_nodejs//:index.bzl", "pkg_npm")
load("@npm//@bazel/typescript:index.bzl", "ts_library")

ts_library(
    name = "foo_library",
    visibility = ["//visibility:public"],
    srcs = [
        "foo.ts",
    ],
    module_name = "@tests/foo",
)

pkg_npm(
    name = "foo_package",
    srcs = [
        "package.json",
    ],
    deps = [
        ":foo_library",
    ],
)
