load("@build_bazel_rules_nodejs//:index.bzl", "pkg_npm")
load("@npm//@bazel/typescript:index.bzl", "ts_library")


ts_library(
    name = "bla_lib",
    module_name = "@test_scoped_repo/foo/bla",
    visibility = ["//visibility:public"],
    srcs = [
        "bla.ts",
    ],

)

pkg_npm(
    name = "bla_pkg",
    visibility = ["//visibility:public"],
    deps = [
        ":bla_lib",
    ],
)
